--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -1,11 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-</head>
-<body>
+{% extends 'users/base.html' %}
+{% block body %}
     <div class="row">
         <div class="col-md-12">
             <form method="POST">
@@ -14,9 +8,8 @@
                 <button type="submit">Login</button>
             </form>
         </div>
+        <p>New User? Register <a href="{% url 'register_user' %}">here</a></p>
 
     </div>
     
-    
-</body>
-</html>
+{% endblock body %}
