--- a/users/templates/users/password_change.html
+++ b/users/templates/users/password_change.html
@@ -1,8 +1,11 @@
 {% extends 'users/base.html' %}
 {% block body %}
-    <h2> Do you want to Logout?</h2>
     <form method="POST">
         {% csrf_token %}
-        <button type="submit">Yes</button>
+       
+        {{ form.as_p }}
+        <button type="submit">Submit </button>
+
     </form>
+
 {% endblock body %}
